Minor refactoring and documentation for the epistemic axiom removal mechanism.